force-app/main/default/objects/Geocoder_Settings__c/Geocoder_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Geocoder Settings</label>
</CustomObject>