force-app/main/default/objects/Geocoder_Settings__c/fields/Activate_Account_Geocoding__c.field-meta.xml
<CustomField>
    <fullName>Activate_Account_Geocoding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to enable geocoding on Accounts</description>
    <inlineHelpText>Check to enable geocoding on Accounts</inlineHelpText>
    <label>Activate Account Geocoding</label>
    <type>Checkbox</type>
</CustomField>