force-app/main/default/objects/Geocoder_Settings__c/fields/Activate_Contact_Geocoding__c.field-meta.xml
<CustomField>
    <fullName>Activate_Contact_Geocoding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to enable geocoding on Contacts</description>
    <inlineHelpText>Check to enable geocoding on Contacts</inlineHelpText>
    <label>Activate Contact Geocoding</label>
    <type>Checkbox</type>
</CustomField>