force-app/main/default/objects/Geocoder_Settings__c/fields/Activate_Lead_Geocoding__c.field-meta.xml
<CustomField>
    <fullName>Activate_Lead_Geocoding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to enable geocoding on Leads</description>
    <inlineHelpText>Check to enable geocoding on Leads</inlineHelpText>
    <label>Activate Lead Geocoding</label>
    <type>Checkbox</type>
</CustomField>