force-app/main/default/objects/Geocoder_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Google Maps API key. Can be obtained here https://developers.google.com/maps/documentation/embed/get-api-key</description>
    <inlineHelpText>Google Maps API key</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>